--- a/.github/workflows/stage-4-deploy.yaml
+++ b/.github/workflows/stage-4-deploy.yaml
@@ -59,3 +59,43 @@ jobs:
           echo "See pipeline run in Azure devops: https://dev.azure.com/nhse-dtos/dtos-manage-breast-screening/_build/results?buildId=${RUN_ID}&view=results"
 
           scripts/bash/wait_ado_pipeline.sh "$RUN_ID" https://dev.azure.com/nhse-dtos dtos-manage-breast-screening
+
+      - name: Basic application smoke test
+        run: |
+          set -e
+
+          if [[ -n "${{inputs.pr_number}}" ]]; then
+            enviornment_identifier="pr-${{inputs.pr_number}}"
+          else
+            enviornment_identifier=${{ matrix.environment }}
+          fi
+
+          ENDPOINT="https://${enviornment_identifier}.manage-breast-screening.non-live.screening.nhs.uk/sha"
+          EXPECTED_SHA="${{ inputs.commit_sha }}"
+          TIMEOUT=300
+          INTERVAL=5
+
+          start_time=$(date +%s)
+
+          while true; do
+            if ACTUAL_SHA=$(curl -fsSL "$ENDPOINT" 2>/dev/null); then
+              echo "Endpoint responded: $ACTUAL_SHA"
+              if [ "$ACTUAL_SHA" = "$EXPECTED_SHA" ]; then
+                echo "✅ SHA matches expected commit: $EXPECTED_SHA"
+                exit 0
+              else
+                echo "❌ SHA mismatch. Expected $EXPECTED_SHA but got $ACTUAL_SHA"
+                exit 1
+              fi
+            fi
+
+            now=$(date +%s)
+            elapsed=$((now - start_time))
+            if [ $elapsed -ge $TIMEOUT ]; then
+              echo "❌ Timeout: Endpoint did not become ready within ${TIMEOUT}s"
+              exit 1
+            fi
+
+            echo "Still waiting... ($elapsed/${TIMEOUT}s elapsed)"
+            sleep $INTERVAL
+          done
