--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -5,7 +5,10 @@ updates:
     directory: '/'
     schedule:
       interval: 'daily'
+
     ignore:
+      # Manually track LTS release versions (see .tool-versions, package.json
+      # and .browserslistrc)
       - dependency-name: 'node'
 
   - package-ecosystem: 'github-actions'
