--- a/.github/workflows/stage-3-build.yaml
+++ b/.github/workflows/stage-3-build.yaml
@@ -40,7 +40,7 @@ env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
   DOCKER_METADATA_PR_HEAD_SHA: true
-  REPOSITORY_LOWERCASE: nhsdigital/dtos_manage_breast_screening
+  REPOSITORY_LOWERCASE: nhsdigital/dtos-manage-breast-screening
 
 jobs:
   build:
@@ -81,6 +81,16 @@ jobs:
       - name: Print commit SHA
         run: echo "Commit SHA is ${{ inputs.commit_sha }}"
 
+      - name: Set branch environment variable (push)
+        if: github.event_name == 'push'
+        shell: bash
+        run: echo "GIT_BRANCH=${GITHUB_REF##*/}" >> $GITHUB_ENV # GIT_BRANCH will be main for refs/heads/main
+
+      - name: Set branch environment variable (pull_request)
+        if: github.event_name == 'pull_request'
+        shell: bash
+        run: echo "GIT_BRANCH=${GITHUB_HEAD_REF##*/}" >> $GITHUB_ENV
+
       - name: Build and push Docker image
         id: push
         uses: docker/build-push-action@263435318d21b8e681c14492fe198d362a7d2c83
@@ -91,8 +101,10 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
             COMMIT_SHA=${{ inputs.commit_sha }}
-          cache-from: type=registry,ref=${{ env.REGISTRY }}/${{ env.REPOSITORY_LOWERCASE }}:buildcache
-          cache-to: type=registry,ref=${{ env.REGISTRY }}/${{ env.REPOSITORY_LOWERCASE }}:buildcache,mode=max
+          cache-from: |
+            type=registry,ref=${{ env.REGISTRY }}/${{ env.REPOSITORY_LOWERCASE }}:cache-${{ env.GIT_BRANCH }}
+            type=registry,ref=${{ env.REGISTRY }}/${{ env.REPOSITORY_LOWERCASE }}:cache-main
+          cache-to: type=registry,ref=${{ env.REGISTRY }}/${{ env.REPOSITORY_LOWERCASE }}:cache-${{ env.GIT_BRANCH }},mode=max
 
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v3
