--- a/.github/workflows/stage-1-commit.yaml
+++ b/.github/workflows/stage-1-commit.yaml
@@ -50,7 +50,7 @@ jobs:
           #
           # To keep PRs independent of each other, we can fetch with an "infinite" depth, rather than
           # the special 0 value of actions/checkout, which means "fetch all history for all tags and branches"
-          depth: 0x7fffffff # INFINITE_DEPTH
+          fetch-depth: 0x7fffffff # INFINITE_DEPTH
         uses: actions/checkout@v5
       - name: 'Scan secrets'
         uses: ./.github/actions/scan-secrets
