--- a/.github/workflows/cicd-1-pull-request-closed.yaml
+++ b/.github/workflows/cicd-1-pull-request-closed.yaml
@@ -36,6 +36,8 @@ jobs:
             --parameters commitSHA=${{ github.event.pull_request.head.sha }} prNumber=${{ github.event.pull_request.number }} \
             --output tsv --query id)
 
+          echo "See pipeline run in Azure devops: https://dev.azure.com/nhse-dtos/dtos-manage-breast-screening/_build/results?buildId=${RUN_ID}&view=results"
+
           scripts/bash/wait_ado_pipeline.sh "$RUN_ID" https://dev.azure.com/nhse-dtos dtos-manage-breast-screening
 
       - name: Post URL to PR comments
