--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ dependencies = [
   "business-python (>=2.1.0,<3.0.0)",
   "django-extensions (>=4.1,<5.0)",
   "azure-monitor-opentelemetry (>=1.8.1,<2.0.0)",
-  "django-fsm-log (>=3.1.0,<4.0.0)",
+  "django-fsm-2 (>=4.0.0,<5.0.0)",
 ]
 
 [tool.poetry]
