--- a/.gitleaksignore
+++ b/.gitleaksignore
@@ -16,6 +16,7 @@ infrastructure/terraform/resource_group_init/main.bicep:generic-api-key:31
 infrastructure/terraform/resource_group_init/main.bicep:generic-api-key:32
 infrastructure/terraform/resource_group_init/main.bicep:generic-api-key:33
 infrastructure/terraform/resource_group_init/keyVault.bicep:generic-api-key:12
+infrastructure/terraform/resource_group_init/keyVault.bicep:generic-api-key:13
 infrastructure/terraform/resource_group_init/core.bicep:generic-api-key:15
 infrastructure/terraform/resource_group_init/core.bicep:generic-api-key:16
 infrastructure/terraform/resource_group_init/storage.bicep:generic-api-key:59
