--- a/manage_breast_screening/data/east_tester_one_week_ago_clinic_data.yml
+++ b/manage_breast_screening/data/east_tester_one_week_ago_clinic_data.yml
@@ -61,6 +61,16 @@ clinic:
                 - 910 Clinic Road
                 - Brighton
               postcode: B4 8N9
+        medical_information:
+          breast_cancer_history_items:
+            - id: 3f4e1f4e-E6D1-4A2B-9C3D-1F2E3A4B5C6D
+              diagnosis_location: RIGHT_BREAST
+              diagnosis_year: 2024
+              left_breast_procedure: NO_PROCEDURE
+              right_breast_procedure: LUMPECTOMY
+              systemic_treatments: NO_RADIOTHERAPY
+              intervention_location: NHS_HOSPITAL
+              intervention_location_details: East Tester Hospital
     - id: c19bf83e-a1b5-4374-a84d-ab29d24e995d
       duration_in_minutes: 8
       starts_at_time: 09:16
