--- a/manage_breast_screening/data/east_tester_today_clinic_data.yml
+++ b/manage_breast_screening/data/east_tester_today_clinic_data.yml
@@ -32,6 +32,16 @@ clinic:
                 - 90 Clinic Road
                 - Leeds
               postcode: N4 5B2
+        medical_information:
+          breast_cancer_history_items:
+            - id: 77156150-1A82-4C18-9661-509EF0B9CA42
+              diagnosis_location: RIGHT_BREAST
+              diagnosis_year: 2024
+              left_breast_procedure: NO_PROCEDURE
+              right_breast_procedure: LUMPECTOMY
+              systemic_treatments: NO_SYSTEMIC_TREATMENTS
+              intervention_location: NHS_HOSPITAL
+              intervention_location_details: East Tester Hospital
     - id: aa1b4c5c-3742-4f97-aa68-04a6f3bd631b
       duration_in_minutes: 8
       starts_at_time: 09:08
