--- a/infrastructure/environments/preprod/variables.yml
+++ b/infrastructure/environments/preprod/variables.yml
@@ -3,3 +3,4 @@ BASIC_AUTH_ENABLED: True
 CIS2_SERVER_METADATA_URL: https://am.nhsint.auth-ptl.cis2.spineservices.nhs.uk/openam/oauth2/realms/root/realms/NHSIdentity/realms/Healthcare/.well-known/openid-configuration
 PERSONAS_ENABLED: 1
 CSRF_TRUSTED_ORIGINS: 'https://preprod.manage-breast-screening.screening.nhs.uk'
+NOTIFICATIONS_SMTP_IS_ENABLED: True
