--- a/infrastructure/environments/prod/variables.yml
+++ b/infrastructure/environments/prod/variables.yml
@@ -2,3 +2,4 @@ BASE_URL: https://manage-breast-screening.nhs.uk
 BASIC_AUTH_ENABLED: True
 CIS2_SERVER_METADATA_URL: https://am.nhsint.auth-ptl.cis2.spineservices.nhs.uk/openam/oauth2/realms/root/realms/NHSIdentity/realms/Healthcare/.well-known/openid-configuration
 CSRF_TRUSTED_ORIGINS: 'https://manage-breast-screening.nhs.uk'
+NOTIFICATIONS_SMTP_IS_ENABLED: True
