--- a/infrastructure/environments/dev/variables.yml
+++ b/infrastructure/environments/dev/variables.yml
@@ -4,3 +4,4 @@ CIS2_SERVER_METADATA_URL: https://am.nhsint.auth-ptl.cis2.spineservices.nhs.uk/o
 PERSONAS_ENABLED: 1
 CSRF_TRUSTED_ORIGINS: 'https://dev.manage-breast-screening.non-live.screening.nhs.uk'
 NOTIFICATIONS_SMTP_IS_ENABLED: False
+APPLICATIONINSIGHTS_IS_ENABLED: True
