--- a/infrastructure/environments/preprod/variables.yml
+++ b/infrastructure/environments/preprod/variables.yml
@@ -4,3 +4,4 @@ CIS2_SERVER_METADATA_URL: https://am.nhsint.auth-ptl.cis2.spineservices.nhs.uk/o
 PERSONAS_ENABLED: 1
 CSRF_TRUSTED_ORIGINS: 'https://preprod.manage-breast-screening.screening.nhs.uk'
 NOTIFICATIONS_SMTP_IS_ENABLED: True
+APPLICATIONINSIGHTS_IS_ENABLED: True
