--- a/infrastructure/environments/review/variables.yml
+++ b/infrastructure/environments/review/variables.yml
@@ -2,3 +2,4 @@ BASIC_AUTH_ENABLED: True
 PERSONAS_ENABLED: 1
 CSRF_TRUSTED_ORIGINS: 'https://*.manage-breast-screening.non-live.screening.nhs.uk'
 NOTIFICATIONS_SMTP_IS_ENABLED: False
+APPLICATIONINSIGHTS_IS_ENABLED: True
