--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -58,7 +58,7 @@ updates:
         patterns:
           - 'concurrently'
 
-  - package-ecosystem: 'pip'
+  - package-ecosystem: 'uv'
     directory: '/'
     schedule:
       interval: 'daily'
